# ioc

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: lint-test.yml
ioc/: __init__.py  ioc.py
ioc/container/: __init__.py  container.py  exceptions.py  interfaces.py
tests/: test_resolve.py  test_scopes.py
